Can't get vr display intermediately after relaunch VR process.
Categories
(Core :: WebVR, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | verified |
| firefox71 | --- | verified |
People
(Reporter: daoshengmu, Assigned: daoshengmu)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
According to MozRegression, this bug happens at [1] in Bug 1566285. A regression from FF 70.
STR:
- Open https://webvr.info/samples/04-simple-mirroring.html
- Open another tab, go to Wikipedia
- Close the first tab and wait VR process is shutdown.
- Open another tab, go to https://webvr.info/samples/04-simple-mirroring.html.
Expected result:
We can get VR display and enter immersive mode successfully.
Actual result:
Can't get VR display.
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
This is because VR process need to wait a little bit until it is launched, then we can get the current VR display states. Using mEnumerationCompleted should be a good way to go because it comes from the shmem from the other side.
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 4•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 5•6 years ago
|
||
Comment on attachment 9093463 [details]
Bug 1581988 - Making VR display enumerationCompleted be false when doing enumeration.
Beta/Release Uplift Approval Request
- User impact if declined: Users can't get VR display intermediately when reopening VR pages. (Fixes regress Bug 1566285)
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This just resets the state of enumeration and ask for doing enumeration again, so it will not bring any risk.
- String changes made/needed:
Updated•6 years ago
|
Comment 6•6 years ago
|
||
Comment on attachment 9093463 [details]
Bug 1581988 - Making VR display enumerationCompleted be false when doing enumeration.
Fix for a VR regression introduced in 70, one liner, looks safe, uplift approved for 70 beta 9, Thanks.
Comment 7•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Sorry for the long pause.
I reproduced this issue on Fx 71.0a1(2019-09-17), using Windows 10 x64 with Oculus Rift.
I can confirm this issue is fixed, I verified on Fx 71.0a1 (2019-10-04) and Fx 70.0b12 on the same environment.
Updated•4 years ago
|
Description
•