Bug 1581988 - Making VR display enumerationCompleted be false when doing enumeration. r=kip a=pascalc

If VR process haven't launched yet, we couldn't get available VR displays and its states, so we need to make enumationCompleted to be false, and ask it do the enumeration again.

Differential Revision: https://phabricator.services.mozilla.com/D46238